--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         class="main mt-7 max-w-screen-xl mx-auto grid lg:grid-cols-2 grid-cols-1 gap-6"
       >
         <div
-          class="card_1 bg-[#F9DF8A] p-10 space-y-5 row-span-3 col-span-1 h-[370px] relative rounded-lg"
+          class="card_1 bg-[#F9DF8A] p-10 space-y-5 row-span-3 col-span-1 h-[365px] relative rounded-lg"
         >
           <h2 class="text-3xl ADLaM_text">T-Shirt For Dogs</h2>
           <p class="sora-text text-[#111111] font-normal opacity-70">
@@ -453,15 +453,20 @@
       </div>
       <div class="max-w-screen-xl mx-auto grid lg:grid-cols-3 gap-8 mb-7">
         <div
-          class="card bg-gradient-to-r from-[#F8CCFB] to-[#ACD2FD] space-y-5 col-span-2 justify-end card-side shadow-xl p-10 h-[440px] hidden"
+          class="card bg-gradient-to-r from-[#F8CCFB] to-[#ACD2FD] space-y-5 lg:col-span-2 justify-end lg:card-side shadow-xl p-10 lg:h-[440px]"
         >
-          <div class="place-items-start mt-24 space-y-3">
-            <span class="sora-text text-[#111111] font-normal opacity-70"
+          <div class="place-items-start lg:mt-24 space-y-3">
+            <span
+              class="sora-text text-[#111111] font-normal opacity-70 sm:hidden lg:block"
               >Under Price</span
             >
             <h2 class="font-bold text-[#000000] text-4xl">Pet Grooming Mitt</h2>
-            <p class="text-[#FFFFFF] text-3xl font-bold">(Easy Hair Removal)</p>
-            <p class="font-bold text-[#000000] text-4xl">$7.99</p>
+            <p class="text-[#FFFFFF] text-3xl font-bold sm:hidden lg:block">
+              (Easy Hair Removal)
+            </p>
+            <p class="font-bold lg:text-[#000000] sm:text-[#FFFFFF] text-4xl">
+              $7.99
+            </p>
           </div>
           <div class="place-items-end">
             <img src="./c1-assets/cute-dog-mid.png" alt="" class="w-3/4" />
@@ -480,19 +485,120 @@
             </div>
           </div>
         </div>
-        <div
-          class="card bg-gradient-to-r from-[#FFF9F4] to-[#F9DF8A] p-10 space-y-5 col-span- card-side shadow-xl lg:h-[440px] h-[370px] lg:hidden"
-        >
-          <div class="space-y-3">
-            <h2 class="font-bold text-[#000000] text-4xl">T-Shirt for Dogs</h2>
+      </div>
+    </section>
 
-            <p class="font-bold text-[#FFDC26] text-4xl">$7.99</p>
-            <div class="place-items-end absolute right-0 lg:top-32 top-16">
-              <img src="./c1-assets/cute-dog-mid.png" alt="" class="w-[60%]" />
-            </div>
-          </div>
+    <section
+      class="space-y-10 p-10 z-10 right-0 left-0 absolute overflow-hidden mt-10"
+    >
+      <div
+        class="grid lg:grid-cols-2 justify-items-center items-center bg-[#FFF9F4] p-10 rounded-md"
+      >
+        <div>
+          <img src="./c1-assets/cute-pet-mid.png" alt="" />
+        </div>
+
+        <div class="space-y-4 text-center lg:text-start">
+          <h2 class="text-3xl ADLaM_text">Get Pawsome News!</h2>
+          <p class="sora-text text-[#111111] font-normal opacity-70">
+            Exclusive training tips, ticks, product deals and more.
+          </p>
+          <input
+            type="text"
+            placeholder="Enter email..."
+            class="input w-full"
+          />
+          <br />
+          <button class="btn bg-[#FFDC26] sora-text text-[#111111] font-normal">
+            Find a pet
+          </button>
         </div>
       </div>
+    </section>
+
+    <section
+      class="bg-[#FFDC2680] h-[600px] lg:mt-[240px] mt-[680px] flex relative items-end"
+    >
+      <footer class="footer text-base-content p-10 max-w-screen-xl mx-auto">
+        <nav>
+          <div class="flex gap-3 items-center justify-center text-center">
+            <img src="./c1-assets/logo-header.png" alt="" class="text-black" />
+            <h2 class="font-normal text-2xl">
+              Browse<span class="text-[#FFDC26]">4</span>Pets
+            </h2>
+          </div>
+          <p>
+            Discover a world of treats, toys, <br />
+            and essentials handpicked for your furry <br />
+            friends
+          </p>
+        </nav>
+        <nav>
+          <a class="link link-hover">Find a pet</a>
+          <a class="link link-hover">Breeds</a>
+          <a class="link link-hover">Contact us</a>
+        </nav>
+        <div class="self-end">
+          <nav class="">
+            <h6 class="footer-title">Follow Us</h6>
+            <div class="grid grid-flow-col gap-4">
+              <a>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  class="fill-current"
+                >
+                  <path
+                    d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"
+                  ></path>
+                </svg>
+              </a>
+              <a>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  class="fill-current"
+                >
+                  <path
+                    d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"
+                  ></path>
+                </svg>
+              </a>
+              <a>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  class="fill-current"
+                >
+                  <path
+                    d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"
+                  ></path>
+                </svg>
+              </a>
+
+              <a>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  class="fill-current"
+                >
+                  <path
+                    d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"
+                  ></path>
+                </svg>
+              </a>
+            </div>
+          </nav>
+        </div>
+      </footer>
     </section>
   </body>
 </html>
