--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <section class="mt-16">
       <div class="max-w-screen-xl mx-auto ADLaM_text p-4">
         <div class="space-y-6 relative z-10">
-          <h1 class="text-5xl text-[#111111] font-normal">
+          <h1 class="text-5xl animate-pulse text-[#111111] font-normal">
             Pamper Your Pet, <br />Because They Deserve <br />
             The Best the Bes
           </h1>
@@ -488,11 +488,46 @@
       </div>
     </section>
 
+    <section class="p-12 rounded-md mt-5">
+      <div class="max-w-screen-xl mx-auto">
+        <h1 class="text-3xl ADLaM_text">Animation</h1>
+      </div>
+      <div
+        class="main max-w-screen-xl mx-auto mt-6 bg-[#0a214f] p-12 rounded-lg grid lg:grid-cols-3 gap-8 items-center text-center justify-items-center"
+      >
+        <div class="animate-bounce">
+          <img src="./c1-assets/img-47.png" alt="" />
+        </div>
+        <div class="text-content space-y-5">
+          <h2 class="font-bold text-4xl text-white animate-pulse">
+            <span class="text-[#F58322] font-bold text-4xl">-50%</span> Spring
+            Deals
+          </h2>
+          <p class="text-white ADLaM_text">
+            Free returns – multiple payment options
+          </p>
+          <button
+            class="btn bg-[#fff] sora-text font-normal rounded-full text-[#0a214f]"
+          >
+            Find a pet
+          </button>
+        </div>
+        <div
+          class="image-content transition delay-150 duration-300 ease-in-out hover:-translate-y-1 hover:scale-110"
+        >
+          <img
+            src="./c1-assets/img-46.png"
+            alt=""
+            class="transition duration-150 ease-in-out"
+          />
+        </div>
+      </div>
+    </section>
     <section
       class="space-y-10 p-10 z-10 right-0 left-0 absolute overflow-hidden mt-10"
     >
       <div
-        class="grid lg:grid-cols-2 justify-items-center items-center bg-[#FFF9F4] p-10 rounded-md"
+        class="max-w-screen-xl mx-auto grid lg:grid-cols-2 justify-items-center place-content-around items-center bg-[#FFF9F4] p-10 rounded-md"
       >
         <div>
           <img src="./c1-assets/cute-pet-mid.png" alt="" />
